<resources>
    <string name="app_name">LoginRegister</string>
    <string name="welcome">WELCOME!!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_a_account">Don\'t have a Account?</string>
    <string name="registerActivity">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="usernameRegActivity">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_a_member">Already A Member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="passwordRegActivity">Password</string>
    <string name="back">Back</string>
</resources>